# FastAPIDefault

./: .env.ci  .env.dev  .env.example  .env.local  .env.prod  .env.test  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.MD  CONTRIBUTING.md  LICENSE  PUBLISHING.md  PYPI_READY.md  README.md  TEMPLATE_USAGE.md  Taskfile.yml  dev.py  docker-compose  docker-compose.db.yml  docker-compose.obs.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  students.csv
.github/workflows/: cd.yml  ci.yml  publish.yml  tests.yml
deployments/compose/backend/: Dockerfile  entrypoint  start
deployments/compose/backend/celery/flower/: start
deployments/grafana/dashboards/: fastapi.json  node-exporter.json  postgres.json
deployments/grafana/provisioning/dashboards/: dashboards.yml
deployments/loki/: promtail.yml
deployments/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  BACKEND_ROADMAP.md  DEPLOYMENT.md  OBSERVABILITY.md
scripts/: collectstatic.py  create_admin.py
src/: .gitignore  alembic.ini  app.py  main.py
src/admin/: __init__.py  auth.py  base.py  dummy.py  loader.py  user.py
src/admin/default/: profile.py  user.py
src/api/: router.py
src/core/: admin.py  admin_permissions.py  celery.py  database.py  exceptions.py  lifespan.py  logger.py  mail.py  monitoring.py  prometheus.py  rate_limit.py  security.py  settings.py  swagger.py
src/core/admin/: auth.py  base.py  errors.py  init_admin.py  messages.py  permissions.py  registry.py
src/core/exceptions/: base.py  errors.py  handlers.py
src/core/module_engine/: base.py  registry.py
src/core/observability/: __init__.py  monitoring.py  prometheus.py  sentry.py
src/core/security/: __init__.py  jwt.py  passwords.py
src/db/: base.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2026-02-22-21-35_acbdcb0fa675.py  2026-02-28-15-45_032d57eb04ea.py  2026-03-04-21-46_b090adf5ab99.py  2026-03-11-20-10_55e151fee0df.py  2026-03-12-21-55_4197972909a9.py  2026-03-13-10-52_be58262522f0.py  2026-03-13-21-03_754b05e8ad8f.py  2026-03-13-21-10_c9f6a1d2e4b7.py  2026-03-13-21-12_d5b1b392c205.py  2026-03-13-21-20_dce841940614.py  2026-03-13-21-22_a6c2e9f4b1d3.py  2026-03-13-21-40_f2c4b8a1d0e5.py  2026-03-13-22-20_7a1d3f9c9b10.py  2026-03-15-21-38_622399e795c6.py  2026-03-15-21-45_54d3a997200d.py  2026-03-16-23-58_a94f437259a0.py  2026-03-25-00-01_2509a48f1b57.py  2026-04-02-20-49_385e09311891.py  2026-04-06-02-25_b9a1c7d4a001.py
src/db/models/: dummy.py  user.py
src/infrastructure/admin/: auth.py  base.py  context.py  dashboard.py  init_admin.py  permissions.py  registry.py
src/middlewares/: __init__.py  logging.py  metrics.py  request_id.py  security_headers.py
src/modules/: __init__.py  base.py
src/modules/dummy/: admin.py  crud.py  models.py  module.py  repository.py  router.py  schemas.py
src/modules/home/: module.py  router.py
src/modules/home/templates/: base.html  index.html
src/modules/platform_admin/: auth.py  init_admin.py  module.py
src/modules/platform_audit/: middlewares.py  models.py  module.py  repository.py  router.py  schemas.py  security.py  services.py
src/modules/users/: admin.py  module.py
src/modules/users/admin/: users.py
src/modules/users/models/: users.py
src/modules/users/router/: __init__.py
src/modules/users/tasks/: mail_task.py
src/src/: alembic.ini
src/src/db/migrations/: env.py
src/static/admin/css/: admin.css
src/static/admin/js/: admin.js  dashboard.js
src/static/css/: main.css
src/static/js/: main.js
src/tasks/: __init__.py  test_task.py
src/templates/: base.html  index.html
src/templates/admin/: profile.html
src/templates/sqladmin/: base.html  index.html  layout.html  list.html  login.html
tests/: conftest.py  test_app.py  test_app_and_middlewares.py  test_core_exceptions_and_db.py  test_core_observability_and_settings.py  test_core_rate_limit_and_registry.py  test_dummy.py  test_dummy_negative.py  test_modules_dummy_and_admin.py  test_platform_audit.py  test_rate_limit.py
