[project]
name = "fastapidefault"
version = "0.1.0"
description = "FastAPI Template Project"
authors = [{ name = "Jahongir Hakimjonov", email = "jahongirhakimjonov@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.15.2",
    "fastapi[all]==0.115.12",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "prometheus-client==0.22.0",
    "pydantic-settings==2.9.1",
    "pydantic==2.11.4",
    "sentry_sdk[fastapi]==2.29.1",
    "sqlalchemy[asyncio]==2.0.41",
    "uvicorn==0.34.2",
    "yarl==1.20.0",
    "starlette>=0.46.2",
    "orjson>=3.11.7",
    "asyncpg>=0.30.0",
    "sqladmin>=0.23.0",
    "psycopg2-binary>=2.9.11",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = ["fastapi[standard]", "deptry"]
test = ["pytest", "pytest-cov", "pytest-mock", "anyio"]
lint = ["ruff"]
typecheck = ["mypy", "asyncpg-stubs"]
docker = ["uvloop==0.21.0", "httptools==0.6.4"]

[tool.uv]
default-groups = ["dev", "test", "lint", "typecheck"]
package = true

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/db/migrations"]

[tool.deptry]
ignore = ["DEP002"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "S", # bandit
    "UP", # pyupgrade
    "W", # pycodestyle
    "FAST", # fastapi
]
ignore = [
    "B008", # function-call-in-default-argument
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
strict = true
ignore_missing_imports = true
disallow_any_generics = false
pretty = true
show_error_codes = true
implicit_reexport = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[[tool.mypy.overrides]]
module = "app,core.*"
ignore_missing_imports = true
