[project]
name = "fastapi-default"
version = "1.0.0"
description = "Production-ready FastAPI template with async SQLAlchemy, Prometheus monitoring, Sentry tracking, and Docker support"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "fastapi",
    "template",
    "production",
    "async",
    "sqlalchemy",
    "postgresql",
    "prometheus",
    "sentry",
    "docker"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]

dependencies = [
    "alembic>=1.15.2",
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "prometheus-client>=0.22.0",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "sentry_sdk[fastapi]>=2.29.1",
    "sqlalchemy[asyncio,mypy]>=2.0.41",
    "uvicorn>=0.34.2",
    "yarl>=1.20.0",
    "starlette>=0.46.2",
    "orjson>=3.11.7",
    "asyncpg>=0.30.0",
    "sqladmin>=0.23.0",
    "psycopg2-binary>=2.9.11",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "itsdangerous>=2.2.0",
    "python-jose[cryptography]>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-default"
Documentation = "https://github.com/yourusername/fastapi-default#readme"
Repository = "https://github.com/yourusername/fastapi-default.git"
Issues = "https://github.com/yourusername/fastapi-default/issues"

[dependency-groups]
dev = ["fastapi[standard]", "deptry"]
test = ["pytest", "pytest-cov", "pytest-mock", "anyio"]
lint = ["ruff"]
typecheck = ["mypy", "asyncpg-stubs"]
docker = ["uvloop==0.21.0", "httptools==0.6.4"]

[tool.uv]
default-groups = ["dev", "test", "lint", "typecheck"]
package = true

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/db/migrations"]

[tool.deptry]
ignore = ["DEP002"]
exclude = ["src/db/migrations"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "S", # bandit
    "UP", # pyupgrade
    "W", # pycodestyle
    "FAST", # fastapi
]
ignore = [
    "B008", # function-call-in-default-argument
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]

[tool.mypy]
mypy_path = "src"
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"
explicit_package_bases = true
strict = true
ignore_missing_imports = true
disallow_any_generics = false
pretty = true
show_error_codes = true
implicit_reexport = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[[tool.mypy.overrides]]
module = ["sqladmin.*", "prometheus_client.*"]
ignore_errors = true
